--- a/src/Frontend/card.css
+++ b/src/Frontend/card.css
@@ -12,3 +12,10 @@
     border-radius: 3px;
     box-shadow:0px 0px 3px 0px brown;
 }
+
+.card>img{
+    object-fit: contain;
+    width: 10vw;
+    height: 28vh;
+    
+  }
