--- a/src/Frontend/brand.css
+++ b/src/Frontend/brand.css
@@ -2,11 +2,16 @@
   width: 22%;
   padding: 10px;
   text-align: center;
-  background-color:white;
+  /* background:linear-gradient(45deg,rgb(53, 52, 52),rgb(125, 126, 125),rgb(138, 137, 137),rgb(228, 228, 209),rgb(172, 171, 171),rgb(109, 109, 109),rgb(56, 56, 56),yellow,green); */
+  background-color: rgb(46, 49, 51);
 }
 .brand__login{
     padding: 10px;
     background-color: rgb(188, 206, 212);
     border-radius: 5px;
     border: none;
+}
+.brand__login:hover{
+  background-color: rgb(7, 39, 49);
+  color: white;
 }
