--- a/src/Frontend/influencer.css
+++ b/src/Frontend/influencer.css
@@ -2,7 +2,8 @@
     width: 22%;
     padding: 10px;
     text-align: center;
-    background-color:white;
+    /* background:linear-gradient(45deg,green,yellow,rgb(53, 52, 52),rgb(125, 126, 125),rgb(138, 137, 137),rgb(228, 228, 209),rgb(172, 171, 171),rgb(109, 109, 109),rgb(56, 56, 56)); */
+    background-color: rgb(46, 49, 51);
 }
 .influencer__Access{
     padding: 10px;
@@ -10,6 +11,10 @@
     border-radius: 5px;
     border: none;
 }
+.influencer__Access:hover{
+    background-color: rgb(7, 39, 49);
+    color: white;
+  }
 .text{
     margin-top: 20px;
     margin-bottom: 20px;
