--- a/src/Frontend/inputform.css
+++ b/src/Frontend/inputform.css
@@ -4,7 +4,7 @@
 .form_box{
     margin: 10px;
     padding: 10px;
-    width: 37vw;
+    width: 36.5vw;
     border-radius: 5px;
     background-color: rgb(188, 206, 212);
     border-radius: 5px;
@@ -20,17 +20,16 @@
     color: rgb(10, 10, 10);
     border-radius: 5px;
     background-color: rgb(188, 206, 212);
-    border-radius: 5px;
     border: none;
     text-align: center;
 }
 
 .form__box{
     margin: 10px;
-    width: 19vw;
+    width: 18.3vw;
     padding: 10px;
     border-radius: 5px;
     background-color: rgb(64, 147, 172);
-    border-radius: 5px;
     border: none;
+    text-align: center;
 }
